tests/paczka2/big_fuzzy/12804519.err
Error in line 4: rsEa S600 40,3
Error in line 19: M8iH509PHJC A510 9,2
Error in line 20: M8iH509PHJC S381 44,0
Error in line 18: rsEa A510 26,4
Error in line 23: Vr4dLXT A234 61,3
Error in line 29: Vr4dLXT S381 14,3
Error in line 28: 5hRf3Nm6 S600 69,6
Error in line 35: 5hRf3Nm6 A510 40,2
Error in line 36: 5hRf3Nm6 S600 5,4
Error in line 37: 5hRf3Nm6 A234 85,7
Error in line 31: hnomkBio S600 71,6
Error in line 41: hnomkBio A234 39,8
Error in line 61: M8iH509PHJC A510 24,9
Error in line 50: 5hRf3Nm6 S381 186,8
Error in line 33: rsEa S381 90,0
Error in line 66: rsEa S600 80,8
Error in line 65: 5hRf3Nm6 A510 31,0
Error in line 67: rsEa S381 12,9
Error in line 74: 5hRf3Nm6 S600 80,5
Error in line 86: hnomkBio S600 3,3
Error in line 94: hnomkBio S381 63,1
Error in line 95: hnomkBio A234 34,3
Error in line 105: WABWmmDkD S381 46,7
Error in line 106: WABWmmDkD A234 30,3
Error in line 107: WABWmmDkD A510 67,0
Error in line 110: M8iH509PHJC A234 65,2
Error in line 115: M8iH509PHJC S381 78,9
Error in line 117: M8iH509PHJC A510 44,8
Error in line 116: 5hRf3Nm6 S600 86,3
Error in line 121: rsEa S381 52,30
Error in line 123: Vr4dLXT S600 44,7
Error in line 131: WABWmmDkD S600 54,9
Error in line 135: WABWmmDkD A510 93,1
Error in line 122: rsEa S381 89,4
Error in line 140: rsEa S600 37,2
Error in line 139: M8iH509PHJC A234 92,9
Error in line 133: S600 S381 6,4
Error in line 146: M8iH509PHJC A510 -6,7
Error in line 143: M8iH509PHJC A510 87,6
Error in line 158: M8iH509PHJC S381 -2,6
Error in line 159: hnomkBio A510 183,9
Error in line 168: 5hRf3Nm6 A234 43,6
Error in line 179: Vr4dLXT S600 50,75
Error in line 155: M8iH509PHJC S381 69,7
Error in line 171: Vr4dLXT S381 99,3
Error in line 196: S600 S381 344,6
Error in line 207: S600 A510 19,6
Error in line 212: rsEa S600 84,1
Error in line 188: M8iH509PHJC A510 95,1
Error in line 216: rsEa A234 95,8
Error in line 231: S600 A510 70,9
Error in line 230: Vr4dLXT A234 79,5
Error in line 229: rsEa S600 27,0
Error in line 236: Vr4dLXT S600 67,6
Error in line 247: hnomkBio S6jj 2,1
Error in line 244: hnomkBio S600 9,2
Error in line 241: Vr4dLXT A510 84,0
